[gd_scene load_steps=2 format=3 uid="uid://dwssts3r0xoy2"]

[ext_resource type="Script" uid="uid://cvvcnm4rix2bt" path="res://Sceans/final_record_panel.gd" id="1_jxfhq"]

[node name="final_record_panel" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jxfhq")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -348.0
offset_top = -202.0
offset_right = 348.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="well_done!" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "You have done well, for a emu!"

[node name="Final Score" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Final Score: "

[node name="Final Time" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Final Time: "

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Retry?" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Come on!
You can do better than that!"
horizontal_alignment = 1

[node name="Retry" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Retry"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="PanelContainer/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
